--- a/NoteBooks Draft/RZ-Custom Copy.ipynb
+++ b/NoteBooks Draft/RZ-Custom Copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,44 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(cwd + \"\\\\Site.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "name_File2Copy = [\"Result.png\",\"Result_New_Roman.csv\",\"Result_New_Variogram.csv\",\"TimeSeries - NDVI.png\",\"TimeSeries - NIR.png\"]\n",
+    "name_File2Copy = \"Variogram.png\"\n",
     "path_Export = cwd + \"\\\\Export\"\n",
-    "for i in range(df.shape[0]):\n",
-    "    name_Site = df.loc[i,\"Site\"]\n",
-    "\n",
-    "    path_File = []\n",
-    "    for temp_Name in name_File2Copy:\n",
-    "        temp_Path = cwd_Images_Processed + \"\\\\\" + name_Site + \"\\\\\" + temp_Name\n",
-    "        path_File.append(temp_Path)\n",
-    "    for temp_File in path_File:\n",
-    "        if not os.path.exists(path_Export + \"\\\\\" + name_Site):\n",
-    "            os.makedirs(path_Export + \"\\\\\" + name_Site)\n",
-    "        shutil.copy(temp_File, path_Export + \"\\\\\" + name_Site)"
+    "index = 0\n",
+    "for root, dirs, files in os.walk(cwd_Images_Processed):\n",
+    "    for item in dirs:\n",
+    "        temp_FilePath = cwd_Images_Processed + \"\\\\\" + item + \"\\\\\" + \"Variogram.png\"\n",
+    "        shutil.copy(temp_FilePath, path_Export + \"\\\\Variogram \" + item + \".png\")\n",
+    "        index = index +1"
    ]
   },
   {
@@ -88,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
