--- a/NoteBooks/TEST.ipynb
+++ b/NoteBooks/TEST.ipynb
@@ -9,7 +9,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "class Calculator:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Simple Calculator\")\n",
+    "        \n",
+    "        self.result_var = tk.StringVar()\n",
+    "        self.result_var.set(\"0\")\n",
+    "        \n",
+    "        self.create_widgets()\n",
+    "        \n",
+    "    def create_widgets(self):\n",
+    "        # Create result display\n",
+    "        result_entry = tk.Entry(self.root, textvariable=self.result_var, font=('Arial', 20), bd=10, insertwidth=2, width=14, borderwidth=4)\n",
+    "        result_entry.grid(row=0, column=0, columnspan=4)\n",
+    "        \n",
+    "        # Create buttons\n",
+    "        buttons = [\n",
+    "            '7', '8', '9', '/',\n",
+    "            '4', '5', '6', '*',\n",
+    "            '1', '2', '3', '-',\n",
+    "            '0', '.', '=', '+'\n",
+    "        ]\n",
+    "        \n",
+    "        row_val = 1\n",
+    "        col_val = 0\n",
+    "        \n",
+    "        for button in buttons:\n",
+    "            tk.Button(self.root, text=button, padx=20, pady=20, font=('Arial', 18), command=lambda b=button: self.on_button_click(b)).grid(row=row_val, column=col_val)\n",
+    "            col_val += 1\n",
+    "            if col_val > 3:\n",
+    "                col_val = 0\n",
+    "                row_val += 1\n",
+    "\n",
+    "    def on_button_click(self, button):\n",
+    "        current_text = self.result_var.get()\n",
+    "        \n",
+    "        if button == \"=\":\n",
+    "            try:\n",
+    "                result = eval(current_text)\n",
+    "                self.result_var.set(result)\n",
+    "            except Exception as e:\n",
+    "                self.result_var.set(\"Error\")\n",
+    "        elif button == \"C\":\n",
+    "            self.result_var.set(\"\")\n",
+    "        else:\n",
+    "            if current_text == \"0\":\n",
+    "                self.result_var.set(button)\n",
+    "            else:\n",
+    "                self.result_var.set(current_text + button)\n",
+    "                \n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    calculator = Calculator(root)\n",
+    "    root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +94,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# \\\\DISC\n",
     "cwd = \"..\\\\..\\\\\"\n",
     "cwd_Images_Raw = cwd + \"\\\\Sentinel-2 Images Raw\"\n",
-    "cwd_Images_Processed = cwd + \"\\\\Sentinel-2 Images Processed\""
+    "cwd_Images_Processed = cwd + \"\\\\Sentinel-2 Images Processed\"\n",
+    "cwd_Images_Results = cwd + \"\\\\Results\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_HI = pd.read_excel(cwd_Images_Results + \"\\\\HI Average MinMaxOnEachROI with Mean, CV and Sill (91 Sites).xlsx\", header=1)\n",
+    "df_HI = df_HI[['Site','HI Total','Variogram Fit']]\n",
+    "df_Roman = pd.read_excel(cwd_Images_Results + \"\\\\Roman RAW and ST Score (91 Sites).xlsx\")\n",
+    "df = pd.merge(df_Roman,df_HI,on = 'Site')\n",
+    "df.to_csv(cwd_Images_Results + \"\\\\Merge.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
