--- a/NoteBooks/Util - Batch create shp and json.ipynb
+++ b/NoteBooks/Util - Batch create shp and json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,11 @@
        "      <th>Site</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Reference network</th>\n",
+       "      <th>Reference Network</th>\n",
+       "      <th>Main Ecosystem</th>\n",
+       "      <th>FLOX Activity</th>\n",
+       "      <th>Siti Spostati</th>\n",
+       "      <th>Commento</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -86,6 +90,10 @@
        "      <td>52.466778</td>\n",
        "      <td>12.959778</td>\n",
        "      <td>HYPERNET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -94,6 +102,10 @@
        "      <td>33.406152</td>\n",
        "      <td>-5.103319</td>\n",
        "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -102,6 +114,10 @@
        "      <td>33.404814</td>\n",
        "      <td>-5.101614</td>\n",
        "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>To cover more forest</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -110,6 +126,10 @@
        "      <td>47.316700</td>\n",
        "      <td>10.970300</td>\n",
        "      <td>FLOX</td>\n",
+       "      <td>Evergreen Forest</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -118,27 +138,38 @@
        "      <td>39.049139</td>\n",
        "      <td>-2.075917</td>\n",
        "      <td>HYPERNET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number                  Site   Latitude  Longitude Reference network\n",
-       "0       1                  ATGE  52.466778  12.959778          HYPERNET\n",
-       "1       2      ATLAS-Mohammed V  33.406152  -5.103319             Other\n",
-       "2       3  ATLAS-Mohammed V New  33.404814  -5.101614             Other\n",
-       "3       4                AT-Mmg  47.316700  10.970300              FLOX\n",
-       "4       5                  BASP  39.049139  -2.075917          HYPERNET"
+       "   Number                  Site   Latitude  Longitude Reference Network  \\\n",
+       "0       1                  ATGE  52.466778  12.959778          HYPERNET   \n",
+       "1       2      ATLAS-Mohammed V  33.406152  -5.103319             Other   \n",
+       "2       3  ATLAS-Mohammed V New  33.404814  -5.101614             Other   \n",
+       "3       4                AT-Mmg  47.316700  10.970300              FLOX   \n",
+       "4       5                  BASP  39.049139  -2.075917          HYPERNET   \n",
+       "\n",
+       "     Main Ecosystem FLOX Activity Siti Spostati              Commento  \n",
+       "0               NaN           NaN           NaN                   NaN  \n",
+       "1               NaN           NaN           NaN                   NaN  \n",
+       "2               NaN           NaN           Yes  To cover more forest  \n",
+       "3  Evergreen Forest           Yes           NaN                   NaN  \n",
+       "4               NaN           NaN           NaN                   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Site = pd.read_excel(cwd + \"//Site - With Moved ROI (Coordinates Only).xlsx\")\n",
+    "df_Site = pd.read_excel(cwd + \"\\\\Site 101.xlsx\")\n",
     "df_Site.head(5)"
    ]
   },
@@ -151,13 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "IT-SR2 New starts! \n",
+      "The path to B08 of L1C is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\IT-SR2\\L1C\\S2A_MSIL1C_20230821T100601_N0509_R022_T32TPP_20230821T135124.SAFE\\GRANULE\\L1C_T32TPP_A042633_20230821T101414\\IMG_DATA\\T32TPP_20230821T100601_B08.jp2\n",
+      "The path to B04 of L2A is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\IT-SR2\\L2A\\S2A_MSIL2A_20230821T100601_N0509_R022_T32TPP_20230821T163000.SAFE\\GRANULE\\L2A_T32TPP_A042633_20230821T101414\\IMG_DATA\\R10m\\T32TPP_20230821T100601_B04_10m.jp2\n",
+      "The final crs is EPSG:32632\n",
+      "30\n",
+      "100\n",
+      "300\n",
+      "600\n",
+      "900\n",
+      "1200\n",
+      "1800\n",
       "The creation of all sites has finished successfully!\n"
      ]
     }
@@ -168,82 +210,84 @@
     "    temp_SiteName = df_Site['Site'][i]\n",
     "    temp_Latitude = df_Site['Latitude'][i]\n",
     "    temp_Longitude = df_Site['Longitude'][i]\n",
-    "    print(f\"{temp_SiteName} starts! \")\n",
-    "    # Create gdf\n",
-    "    df_4326 = pd.DataFrame({\n",
-    "        \"Site\": [temp_SiteName],\n",
-    "        \"Latitude\": [temp_Latitude],\n",
-    "        \"Longitude\": [temp_Longitude]\n",
-    "    })\n",
-    "    gdf_4326 = gpd.GeoDataFrame(\n",
-    "        df_4326,\n",
-    "        geometry = gpd.points_from_xy(df_4326['Longitude'], df_4326['Latitude']),\n",
-    "        crs = \"EPSG:4326\"\n",
-    "    )\n",
-    "    # Get L1C raster file\n",
-    "    for path, subdirs, files in os.walk(cwd_Images_Raw + \"\\\\\" + temp_SiteName + \"\\\\L1C\"):\n",
-    "        for name in files:\n",
-    "            temp = os.path.join(path, name)\n",
-    "            if \"IMG_DATA\" in temp and temp[-3:] == 'jp2' and \"B08\" in temp:\n",
-    "                # print(temp)\n",
-    "                path_L1C_B08_raw = temp\n",
-    "    print(\"The path to B08 of L1C is \" + path_L1C_B08_raw)\n",
-    "    # Get L2A raster file\n",
-    "    for path, subdirs, files in os.walk(cwd_Images_Raw + \"\\\\\" + temp_SiteName + \"\\\\L2A\"):\n",
-    "        for name in files:\n",
-    "            temp = os.path.join(path, name)\n",
-    "            if temp[-3:] == 'jp2'in temp and \"10m\" in temp and \"B04\" in temp :\n",
-    "                path_L2A_B04_raw = temp\n",
-    "    print(\"The path to B04 of L2A is \" + path_L2A_B04_raw)\n",
-    "    # Read rasters\n",
-    "    image_L1C_B08 = rio.open(path_L1C_B08_raw)\n",
-    "    image_L2A_B04 = rio.open(path_L2A_B04_raw)\n",
-    "    # Check crs\n",
-    "    crs_L1C = image_L1C_B08.crs.data[\"init\"].split(\":\")[1]\n",
-    "    crs_L2A = image_L2A_B04.crs.data[\"init\"].split(\":\")[1]\n",
-    "    # In the case that L1C and L2A have different crs, give an error. But this shouldn't happen. \n",
-    "    if crs_L2A != crs_L1C:\n",
-    "        print(\"The EPSG of L1C is \" + crs_L1C)\n",
-    "        print(\"The EPSG of L2A is \" + crs_L2A)\n",
-    "        print(\"Please make sure the downloaded L2A and L1C images have the same crs. \")\n",
-    "        raise SystemExit(\"Stop right there!\")\n",
-    "    crs_Final = 'EPSG:' + crs_L1C\n",
-    "    print(\"The final crs is \" + crs_Final)\n",
-    "    # Converting Lon-Lat to target crs!\n",
-    "    gdf_New = gdf_4326.copy()\n",
-    "    gdf_New = gdf_New.to_crs(crs_Final)\n",
-    "    # Assign the site to a pixel\n",
-    "    site_x = gdf_New.geometry.x.values[0]\n",
-    "    site_y = gdf_New.geometry.y.values[0]\n",
-    "    site_row, site_col = image_L2A_B04.index(site_x, site_y)\n",
-    "    site_pixel_x, site_pixel_y = image_L2A_B04.xy(site_row, site_col)\n",
-    "    # Calculate the \"cardinal\" distance\n",
-    "    for size in shps:\n",
-    "        side_length_half = size / 2\n",
-    "        if side_length_half % 2 == 0:\n",
-    "            # If the half of the side length is even, we need to add another 5 meters to make sure the pixels on the borders will not be omitted when we clip the raster images. \n",
-    "            length_Cardinal = side_length_half + 5\n",
-    "        else:\n",
-    "            length_Cardinal = side_length_half\n",
-    "        site_x_left_New = site_pixel_x - length_Cardinal\n",
-    "        site_x_right_New = site_pixel_x + length_Cardinal\n",
-    "        site_y_top_New = site_pixel_y + length_Cardinal\n",
-    "        site_y_bottom_New = site_pixel_y - length_Cardinal\n",
-    "        # Create a bounding box\n",
-    "        shp_New = shp.box(site_x_left_New, site_y_bottom_New, site_x_right_New, site_y_top_New)\n",
-    "        # Create shapefile! \n",
-    "        gdf_New = gpd.GeoDataFrame(\n",
-    "            pd.DataFrame({\"0\": [\"0\"]}),\n",
-    "            geometry=[shp_New],\n",
-    "            crs = crs_Final\n",
+    "    if temp_SiteName == 'IT-SR2 New':\n",
+    "        print(f\"{temp_SiteName} starts! \")\n",
+    "        # Create gdf\n",
+    "        df_4326 = pd.DataFrame({\n",
+    "            \"Site\": [temp_SiteName],\n",
+    "            \"Latitude\": [temp_Latitude],\n",
+    "            \"Longitude\": [temp_Longitude]\n",
+    "        })\n",
+    "        gdf_4326 = gpd.GeoDataFrame(\n",
+    "            df_4326,\n",
+    "            geometry = gpd.points_from_xy(df_4326['Longitude'], df_4326['Latitude']),\n",
+    "            crs = \"EPSG:4326\"\n",
     "        )\n",
-    "        gdf_New.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.shp\")\n",
-    "        if bool_JSON:\n",
-    "            gdf_JSON = gdf_New.copy()\n",
-    "            gdf_JSON = gdf_JSON.to_crs(\"EPSG:4326\")\n",
-    "            gdf_JSON.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.json\", driver = \"GeoJSON\")\n",
-    "    print(f\"{temp_SiteName} finishes! \")\n",
-    "    clear_output(wait=True)\n",
+    "        # Get L1C raster file\n",
+    "        for path, subdirs, files in os.walk(cwd_Images_Raw + \"\\\\IT-SR2\\\\L1C\"):\n",
+    "            for name in files:\n",
+    "                temp = os.path.join(path, name)\n",
+    "                if \"IMG_DATA\" in temp and temp[-3:] == 'jp2' and \"B08\" in temp:\n",
+    "                    # print(temp)\n",
+    "                    path_L1C_B08_raw = temp\n",
+    "        print(\"The path to B08 of L1C is \" + path_L1C_B08_raw)\n",
+    "        # Get L2A raster file\n",
+    "        for path, subdirs, files in os.walk(cwd_Images_Raw + \"\\\\IT-SR2\\\\L2A\"):\n",
+    "            for name in files:\n",
+    "                temp = os.path.join(path, name)\n",
+    "                if temp[-3:] == 'jp2'in temp and \"10m\" in temp and \"B04\" in temp :\n",
+    "                    path_L2A_B04_raw = temp\n",
+    "        print(\"The path to B04 of L2A is \" + path_L2A_B04_raw)\n",
+    "        # Read rasters\n",
+    "        image_L1C_B08 = rio.open(path_L1C_B08_raw)\n",
+    "        image_L2A_B04 = rio.open(path_L2A_B04_raw)\n",
+    "        # Check crs\n",
+    "        crs_L1C = image_L1C_B08.crs.data[\"init\"].split(\":\")[1]\n",
+    "        crs_L2A = image_L2A_B04.crs.data[\"init\"].split(\":\")[1]\n",
+    "        # In the case that L1C and L2A have different crs, give an error. But this shouldn't happen. \n",
+    "        if crs_L2A != crs_L1C:\n",
+    "            print(\"The EPSG of L1C is \" + crs_L1C)\n",
+    "            print(\"The EPSG of L2A is \" + crs_L2A)\n",
+    "            print(\"Please make sure the downloaded L2A and L1C images have the same crs. \")\n",
+    "            raise SystemExit(\"Stop right there!\")\n",
+    "        crs_Final = 'EPSG:' + crs_L1C\n",
+    "        print(\"The final crs is \" + crs_Final)\n",
+    "        # Converting Lon-Lat to target crs!\n",
+    "        gdf_New = gdf_4326.copy()\n",
+    "        gdf_New = gdf_New.to_crs(crs_Final)\n",
+    "        # Assign the site to a pixel\n",
+    "        site_x = gdf_New.geometry.x.values[0]\n",
+    "        site_y = gdf_New.geometry.y.values[0]\n",
+    "        site_row, site_col = image_L2A_B04.index(site_x, site_y)\n",
+    "        site_pixel_x, site_pixel_y = image_L2A_B04.xy(site_row, site_col)\n",
+    "        # Calculate the \"cardinal\" distance\n",
+    "        for size in shps:\n",
+    "            print(size)\n",
+    "            side_length_half = size / 2\n",
+    "            if side_length_half % 2 == 0:\n",
+    "                # If the half of the side length is even, we need to add another 5 meters to make sure the pixels on the borders will not be omitted when we clip the raster images. \n",
+    "                length_Cardinal = side_length_half + 5\n",
+    "            else:\n",
+    "                length_Cardinal = side_length_half\n",
+    "            site_x_left_New = site_pixel_x - length_Cardinal\n",
+    "            site_x_right_New = site_pixel_x + length_Cardinal\n",
+    "            site_y_top_New = site_pixel_y + length_Cardinal\n",
+    "            site_y_bottom_New = site_pixel_y - length_Cardinal\n",
+    "            # Create a bounding box\n",
+    "            shp_New = shp.box(site_x_left_New, site_y_bottom_New, site_x_right_New, site_y_top_New)\n",
+    "            # Create shapefile! \n",
+    "            gdf_New = gpd.GeoDataFrame(\n",
+    "                pd.DataFrame({\"0\": [\"0\"]}),\n",
+    "                geometry=[shp_New],\n",
+    "                crs = crs_Final\n",
+    "            )\n",
+    "            gdf_New.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.shp\")\n",
+    "            if bool_JSON:\n",
+    "                gdf_JSON = gdf_New.copy()\n",
+    "                gdf_JSON = gdf_JSON.to_crs(\"EPSG:4326\")\n",
+    "                gdf_JSON.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.json\", driver = \"GeoJSON\")\n",
+    "        # print(f\"{temp_SiteName} finishes! \")\n",
+    "        # clear_output(wait=True)\n",
     "print(\"The creation of all sites has finished successfully!\")"
    ]
   },
